fixed lava covering button with zindex

--- a/styles/home.css
+++ b/styles/home.css
@@ -12,6 +12,7 @@
     border-radius: 10%;
     margin-bottom: 20px;
     margin-right: 20px;
+    z-index: 5;
 
 }
 
